# arrayfy

./: .gitignore  .gitmodules  Makefile  README.md
docs/: arrayfy.js  index.html  index.mjs  style.css
docs/stamp/v1/: widget.js
src/ts/: tsconfig.json
src/ts/.build/: arrayfy.js
src/ts/src/: Blobs.ts  CodeGen.ts  ColorSpaceUis.ts  Colors.ts  Configs.ts  ConvexHulls.ts  Debug.ts  Encoder.ts  Geometries.ts  Images.ts  KMeans.ts  Math3D.ts  PaletteUis.ts  Palettes.ts  Preproc.ts  Reducer.ts  Resizer.ts  Ui.ts  Utils.ts  XorShifts.ts  arrayfy.ts  main.ts
test/pico_cpp/: CMakeLists.txt  Makefile
test/pico_cpp/include/bmp/: argb8888_le_240x240.hpp  bw_hs_128x64.hpp  bw_hs_152x296_k.hpp  bw_hs_152x296_r.hpp  bw_vs_128x64.hpp  bw_vs_296x152_k.hpp  bw_vs_296x152_r.hpp  kwr_hs_152x296.hpp  kwr_vs_296x152.hpp  kwry_hs_184x384.hpp  kwry_hs_240x416.hpp  rgb111_480x320.hpp  rgb444_be_240x240.hpp
test/pico_cpp/include/lgfx/: lgfx_ssd1306.hpp  lgfx_st7789.hpp
test/pico_cpp/include/rawdisp/: command_data_bus.hpp  command_data_display.hpp  command_data_i2c.hpp  command_data_spi.hpp  display.hpp  gpio.hpp  ili9488.hpp  ist7163.hpp  jd79667aa.hpp  rawdisp_common.hpp  ssd1306.hpp  ssd1680.hpp  st7789.hpp
test/pico_cpp/src/: main.cpp
